--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "menuapp",
   "version": "0.1.0",
   "private": true,
-  "homepage": "./",
+  "homepage": "https://ha6icht.github.io/menuapp/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "gh-pages": "^3.2.3",
     "mobx": "^6.0.1",
     "mobx-react": "^7.0.0",
     "react": "^17.0.0",
@@ -16,6 +17,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
