--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "menuapp",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://wolf7803.github.io/menuapp",
+  "homepage": "https://rok7803.github.io/menuapp/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
