--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.3"
+    "react-scripts": "^4.0.3",
+    "serve": "^14.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
