--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "menuapp",
   "version": "0.2.0",
   "private": true,
-  "homepage": ".",
+  "homepage": "http://localhost:8080/www/local.grizzley.menu/menuapp/build",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
@@ -12,7 +12,7 @@
     "mobx-react": "^7.0.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "^5.3.4",
     "react-scripts": "^4.0.3",
     "serve": "^14.2.0"
   },
