--- a/package.json
+++ b/package.json
@@ -1,20 +1,16 @@
 {
   "name": "menuapp",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "private": true,
   "homepage": "http://localhost:8080/www/local.grizzley.menu/menuapp/build",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^7.2.1",
-    "gh-pages": "^3.2.3",
-    "mobx": "^6.0.1",
-    "mobx-react": "^7.0.0",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
-    "react-router-dom": "^5.3.4",
-    "react-scripts": "^4.0.3",
-    "serve": "^14.2.0"
+    "gh-pages": "^5.0.0",
+    "mobx": "^6.10.0",
+    "mobx-react": "^9.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.2",
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
