Ready to deploy

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "menuapp",
   "version": "0.3.0",
-  "private": true,
-  "homepage": "http://localhost:8080/www/local.grizzley.menu/menuapp/build",
+  "private": false,
+  "homepage": "https://rok7803.github.io/menuapp",
   "dependencies": {
     "gh-pages": "^5.0.0",
     "mobx": "^6.10.0",
