--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.4.0",
     "description": "Add browser refresh for path /menu. .htaccess working for Apache Web Server. .config working for nginx Web Server. For Github use HashRouter instead of BrowserRouter in index.js",
     "private": false,
-    "homepage": "http://localhost:8080/www/local.grizzley.menu/menuapp/build",
+    "homepage": "https://rok7803.github.io/menuapp",
     "dependencies": {
         "dotenv": "^16.3.1",
         "gh-pages": "^5.0.0",
